# T-Match

./: .dev-pids  .gitignore  AGENT.md  README.md  docker-compose.yml  start-backend.sh  start-celery-beat.sh  start-celery.sh  start-dev.sh  start-frontend.sh  stop-dev.sh
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  campus.py  campus_recruitment.py  job.py  resume.py  user.py
backend/app/routers/: __init__.py  auth.py  campus.py  jobs.py  match.py  resumes.py  scraper.py
backend/app/schemas/: __init__.py  campus.py  job.py  match.py  resume.py  user.py
backend/app/services/: __init__.py  ai_service.py  milvus_client.py  vector_service.py
backend/app/tasks/: __init__.py  ai_tasks.py
backend/app/utils/: file_converter.py  scraper.py  scraper_api.py  scraper_campus.py  scraper_jobs.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  3eaac46fdf4b_add_campus_recruitment_model.py
backend/t_match_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
extension/: manifest.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
extension/src/background/: index.ts
extension/src/content/: content.css  index.ts
extension/src/popup/: index.html  main.ts  popup.css
extension/src/types/: resume.ts
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  campus.ts  (+5 more)
(+14 files in other folders)
